fixed text align right

--- a/css/style.css
+++ b/css/style.css
@@ -413,7 +413,6 @@ section.sixth-section .text-wrapper p {
 
 section.sixth-section .text-wrapper i {
     font-size: 2rem;
-    text-align: right;
     padding: 0 2.5%;
 }
 
